k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relay-client
  namespace: relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: relay-client
  template:
    metadata:
      labels:
        app: relay-client
    spec:
      containers:
        - name: relay-client
          image: vishnu827/relay-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
