k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: relay-server-service
  namespace: relay
spec:
  selector:
    app: relay-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
