k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: relay-ingress
  namespace: relay
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: relay-client.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: relay-server-service
                port:
                  number: 5000
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: relay-server-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: relay-client-service
                port:
                  number: 8080
